--- a/7fbd2396d08d4b4d8759525dfabca927.opf/meta.yml
+++ b/7fbd2396d08d4b4d8759525dfabca927.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     8046db8157be43aba210fc59c681cdfd:
       base_file: v077.txt
       image_group_id: I1PD95923
-      title: ''
+      title: བསམ་གཏན་གྱི་སྒྲོན་མ་ཞེས་བྱ་བའི་མན་ངག།
       total_pages: 1254
       volume_number: 78
